# csslancer

./: .gitignore  Cargo.toml
client/vscode/: package-lock.json  package.json  tsconfig.json
client/vscode/src/: extension.ts
csslancer/: Cargo.toml  opts.rs
csslancer/src/: config.rs  css_language_service.rs  css_language_types.rs  ext.rs  facts.rs  interop.rs  lib.rs  logging.rs  main.rs
csslancer/src/data/: WebData.json  WebData.licence  data_manager.rs  data_provider.rs  entry.rs  mod.rs
csslancer/src/parser/: css_error.rs  css_node_types.rs  css_nodes.rs  css_nodes2.rs  css_parser.rs  css_parser_tests.txt  css_scanner.rs  css_symbol_scope.rs  mod.rs  syntax.rs
csslancer/src/row_parser/: .gitignore  ast.rs  astgen.rs  css.ungram  css_grammar.rs  css_grammar_test.rs  event.rs  fuzz.rs  input.rs  lex_to_syn.rs  mod.rs  nodes_gen.rs  nodes_types.rs  output.rs  parse_error.rs  parser.rs  reparsing.rs  shortcut.rs  syntax_error.rs  syntax_kind_ext.rs  syntax_kind_gen.rs  syntax_kind_src.rs  token_set.rs  tokens_gen.rs
csslancer/src/services/: css_selection_range.rs  css_validation.rs  hover.rs  mod.rs  selector_printing.rs
csslancer/src/services/semantic_tokens/: csslancer_tokens.rs  mod.rs  token_encode.rs
csslancer/src/tokenizer/: cursor.rs  extra.rs  mod.rs  test.rs
csslancer/src/workspace/: mod.rs  source.rs
csslancer_bench/: Cargo.toml  README.md  build.rs
csslancer_bench/benches/: css_perf.rs
csslancer_bench/blink-overlay/Source/core/css/parser/: CSSParserImpl.cpp  CSSParserMode.cpp  CSSParserMode.h
csslancer_bench/blink-overlay/Source/core/layout/: LayoutTheme.cpp  LayoutTheme.h
csslancer_bench/blink-overlay/Source/platform/geometry/: FloatPoint.h
csslancer_bench/blink-overlay/Source/platform/graphics/: Color.h
csslancer_bench/src/: github_release.rs  main.rs
csslancer_macro/: Cargo.toml
csslancer_macro/src/: lib.rs
doc/: devguide.md
