[package]
name = "csslancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csslancer_macro = {path="./../csslancer_macro"}
anyhow = "1.0.79"
async-trait = "0.1.77"
chrono = "0.4.31"
ego-tree = "0.6.2"
futures = "0.3.30"
itertools = "0.12.0"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.94.0"
regex = "1.10.3"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["io-std", "rt-multi-thread", "macros", "tracing"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", default-features=false, features = [
    "std",
    "registry",
    "fmt"
]}
console-subscriber = "0.2.0"
tracing-chrome = "0.7.1"
strum_macros = "0.26.1"
strum = {version = "0.26.1", features = ["derive"] }

bincode = "1.3.3"
rowan = "0.15.15"
ungrammar = "1.16.1"
quote = "1.0.35"
proc-macro2 = "1.0.79"
xshell = "0.2.6"
either = "1.10.0"
smol_str = "0.2.1"
triomphe = "0.1.11"
drop_bomb = "0.1.5"
syn = "2.0.58"
ra_ap_text_edit = "0.0.212"
ra_ap_limit = "0.0.212"
